
[package]
name = "azle"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.3.2"
ic-cdk-macros = "0.3.2"
# Boa = { version = "0.13.0", features = [] }
# Boa = { path = "../../../boa/boa", default-features = false }
# Boa = { path = "../../../boa/boa", features = [] }
Boa = { path = "../../../boa/boa" }
getrandom = { version = "0.2.3", features = ["custom"] }