[package]
name = "canister"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8.4"
ic-cdk-timers = "0.6.0"
candid = "0.10.2"
candid_parser = "0.1.2"
ic-stable-structures = "0.6.2"
canister_methods = { path = "../canister_methods" }
include_dir = "0.7.3"
slotmap = "=1.0.6"
wasmi = "0.31.2"

# TODO transient feature can be removed once https://github.com/wasm-forge/ic-wasi-polyfill/issues/14
ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", rev = "2d2edb382816e12da9bc81b786b7cd1a00d36735", features = [
    "transient",
] }

wasmedge_quickjs = { git = "https://github.com/demergent-labs/wasmedge-quickjs", rev = "a64adb5910cd7c065b1f0efa337b0a03ffb6afc9" }
# wasmedge_quickjs = { path = "/home/wasmedge-quickjs" }
