[package]
name = "canister"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8.4"
ic-cdk-timers = "0.6.0"
candid = "0.10.2"
candid_parser = "0.1.2"
ic-stable-structures = "0.6.2"
canister_methods = { path = "../canister_methods" }
include_dir = "0.7.3"
slotmap = "=1.0.6"
wasmi = "0.31.2"
sha2 = "0.10.8"
serde_json = "1.0.107"

# TODO transient feature can be removed once https://github.com/demergent-labs/azle/issues/1731 is resolved
# ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", rev = "88bddc8190caf93a1e052f0513b5d6bc074929c3" }
ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", rev = "88bddc8190caf93a1e052f0513b5d6bc074929c3" , features = [
    "transient",
] }

wasmedge_quickjs = { git = "https://github.com/demergent-labs/wasmedge-quickjs", rev = "c21ff69f442998e4cda4619166e23a9bc91418be" }
# wasmedge_quickjs = { path = "/home/wasmedge-quickjs" }
