[package]
name = "azle_generate"
version = "0.0.0"
edition = "2018"

[dependencies]
quote = "1.0.26"
syn = "2.0.15"
proc-macro2 = "1.0.56"
swc_common = "0.27.10"
swc_ecma_parser = "0.117.4"
swc_ecma_ast = "0.90.10"
annotate-snippets = "0.9.1"
cdk_framework = { git = "https://github.com/demergent-labs/cdk_framework", rev = "daeb4a88a8a74e97ca213bec3233905e48808905" }
# cdk_framework = { path = "/home/cdk_framework" }
serde = "1.0.160"
serde_json = "1.0.96"
prettyplease = "0.2.4"
path-clean = "1.0.1"
node-resolve = "2.2.0"
